Bradken/force-app/main/default/objects/Wrike_Task_Region_Mapping__mdt/Wrike_Task_Region_Mapping__mdt.object-meta.xml
<CustomObject>
    <description>Maps SF Sales Region to Wrike Region and contains relevant Wrike Project ID and Wrike Task Title</description>
    <label>Wrike Task Region Mapping</label>
    <pluralLabel>Wrike Task Region Mapping</pluralLabel>
</CustomObject>