Bradken/force-app/main/default/objects/Wrike_Task_Region_Mapping__mdt/fields/Responsible_Contact_ID_2__c.field-meta.xml
<CustomField>
    <fullName>Responsible_Contact_ID_2__c</fullName>
    <inlineHelpText>Represents the second Wrike user&apos;s contact ID that will be made responsible for tasks created in Wrike under this region</inlineHelpText>
    <label>Responsible Contact ID (2)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>