Bradken/force-app/main/default/objects/Wrike_Task_Region_Mapping__mdt/fields/Responsible_Contact_Name_2__c.field-meta.xml
<CustomField>
    <fullName>Responsible_Contact_Name_2__c</fullName>
    <label>Responsible Contact Name (2)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>