Bradken/force-app/main/default/objects/Wrike_Task_Region_Mapping__mdt/fields/Wrike_Project_Folder_ID__c.field-meta.xml
<CustomField>
    <fullName>Wrike_Project_Folder_ID__c</fullName>
    <label>Wrike Project Folder ID</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>