Bradken/force-app/main/default/objects/Wrike_Task_Region_Mapping__mdt/fields/Wrike_Project_Title__c.field-meta.xml
<CustomField>
    <fullName>Wrike_Project_Title__c</fullName>
    <label>Wrike Project Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>