Bradken/force-app/main/default/objects/Wrike_Task_Region_Mapping__mdt/fields/Wrike_Region__c.field-meta.xml
<CustomField>
    <fullName>Wrike_Region__c</fullName>
    <label>Wrike Region</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>East</fullName>
                <default>true</default>
                <label>East</label>
            </value>
            <value>
                <fullName>West</fullName>
            </value>
            <value>
                <fullName>Americas</fullName>
            </value>
            <value>
                <fullName>VWR</fullName>
            </value>
            <value>
                <fullName>Edmonton</fullName>
            </value>
            <value>
                <fullName>SAM</fullName>
            </value>
            <value>
                <fullName>Process Engineering</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>